--- a/admin.html
+++ b/admin.html
@@ -23,14 +23,12 @@
   <script src="/js/darkmode.js" defer></script>
   <script src="/public/auth.js" defer></script>
 
-  <!-- Preload font (same as index) -->
+  <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-  <!-- Respect saved/system dark mode on first paint -->
+  <!-- First-paint dark mode -->
   <script>
     (function () {
       const dm = localStorage.getItem('darkmode');
@@ -40,6 +38,22 @@
       }
     })();
   </script>
+
+  <style>
+    /* small helpers that match your site vibe */
+    .row { display:flex; gap:.75rem; flex-wrap:wrap; align-items:center; }
+    .text-input {
+      padding:.6rem .8rem; border-radius:12px; border:1px solid var(--border, #4442);
+      background: var(--bg, transparent); color: inherit; font: inherit; min-width:260px;
+    }
+    .table { width:100%; border-collapse: collapse; }
+    .table th, .table td { padding:.6rem .5rem; border-bottom:1px solid #6663; text-align:left; }
+    .pill { padding:.2rem .55rem; border-radius:999px; font-size:.8rem; opacity:.8; border:1px solid #6664; }
+    .avatar { width:28px; height:28px; border-radius:50%; object-fit:cover; }
+    .right { text-align:right; }
+    .muted { opacity:.75; font-size:.9rem; }
+    .card-panel { padding:1.25rem; border-radius:18px; box-shadow:0 8px 30px #0002; background:var(--card, rgba(255,255,255,.02)); }
+  </style>
 </head>
 
 <body>
@@ -48,110 +62,199 @@
   <div class="container">
     <div class="banner-container"></div>
 
-    <!-- Admin Gate (populated by script below) -->
+    <!-- Admin Gate -->
     <div class="main" id="admin-gate" style="display:none">
       <h1>Admin Dashboard</h1>
       <p>Welcome, <span id="admin-name"></span> 👋</p>
       <p class="about-me">
-        Use the quick actions and panels below to manage site content and community features.
+        Manage site roles and features below.
       </p>
     </div>
 
     <!-- Not logged-in notice -->
     <div class="main" id="admin-login-needed" style="display:none">
       <h1>Admin Login Required</h1>
-      <p class="about-me">
-        You must be logged in with your Discord account to access admin tools.
-      </p>
+      <p class="about-me">You must be logged in with your Discord account to access admin tools.</p>
       <br/>
       <button class="invite" id="go-login">Login</button>
     </div>
 
-    <!-- Quick Actions -->
-    <div class="discord" id="admin-actions" style="display:none">
-      <h1>Quick Actions</h1>
-      <p>Common admin tasks. (Wire these up later as endpoints.)</p>
-      <br/>
+    <!-- ============ ADMINS MANAGER ============ -->
+    <div class="discord" id="admins-manager" style="display:none">
+      <h1>Admins Manager</h1>
+      <p class="muted">Add/remove Discord IDs with access to this dashboard.</p>
+      <br>
 
-      <div style="display:flex; gap:1rem; flex-wrap:wrap;">
-        <button class="invite" id="rebuild-supporters">Rebuild Supporters Cache</button>
-        <button class="invite" id="toggle-banner">Toggle Site Banner</button>
-        <button class="invite" id="purge-cache">Purge CDN Cache</button>
+      <div class="card-panel">
+        <div class="row">
+          <input id="new-admin-id" class="text-input" type="text" placeholder="Discord User ID (e.g., 123456789012345678)" />
+          <button class="invite" id="btn-add-admin">Add Admin</button>
+          <button class="invite" id="btn-remove-admin">Remove Admin</button>
+        </div>
+        <p class="muted" style="margin-top:.5rem">Tip: Right-click a user in Discord ➜ Copy ID (enable Developer Mode in Discord settings).</p>
       </div>
 
-      <p style="margin-top:1rem; opacity:.75; font-size:.9rem;">
-        Tips: actions should POST to protected endpoints; add confirmations/toasts later.
-      </p>
-    </div>
-  </div>
-
-  <!-- Optional extra section area, same visual style -->
-  <div class="social-container" id="admin-panels" style="display:none">
-    <div class="socials" style="max-width:1000px; margin:0 auto;">
-      <h1>Panels</h1>
       <br><br>
-      <ul class="social-page-icons">
-        <!-- Placeholder cards you can repurpose -->
-        <li class="card">
-          <a href="#" id="panel-users">
-            <img src="/icons/WebsiteLogo.ico" alt="Users">
-            <span class="creator-name">Users</span>
-          </a>
-        </li>
-        <li class="card">
-          <a href="#" id="panel-content">
-            <img src="/icons/WebsiteLogo.ico" alt="Content">
-            <span class="creator-name">Content</span>
-          </a>
-        </li>
-        <li class="card">
-          <a href="#" id="panel-settings">
-            <img src="/icons/WebsiteLogo.ico" alt="Settings">
-            <span class="creator-name">Settings</span>
-          </a>
-        </li>
-      </ul>
+      <div class="card-panel">
+        <div class="row" style="justify-content:space-between">
+          <h2 style="margin:0">Current Admins</h2>
+          <button class="invite" id="btn-refresh">Refresh</button>
+        </div>
+        <br>
+        <div class="table-wrap">
+          <table class="table" id="admins-table" aria-label="Admins table">
+            <thead>
+              <tr>
+                <th>User</th>
+                <th>Discord ID</th>
+                <th>Added By</th>
+                <th>Added At</th>
+                <th class="right">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="admins-tbody">
+              <tr><td colspan="5" class="muted">Loading…</td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
+    <!-- ============ /ADMINS MANAGER ============ -->
+
   </div>
 
   <global-footer></global-footer>
 
-  <!-- Minimal Auth Gate (no roles yet) -->
   <script>
+    async function fetchJSON(url, opts = {}) {
+      const res = await fetch(url, { credentials: 'include', ...opts });
+      if (!res.ok) throw new Error(await res.text());
+      return res.json();
+    }
+
+    function fmtDate(iso) {
+      try { return new Date(iso).toLocaleString(); } catch { return iso || '-'; }
+    }
+
+    function rowHTML(a) {
+      const name = a.global_name || a.username || '(unknown)';
+      const avatarUrl = a.avatar
+          ? `https://cdn.discordapp.com/avatars/${a.user_id}/${a.avatar}.png?size=64`
+          : '/icons/WebsiteLogo.ico';
+      return `
+        <tr data-user-id="${a.user_id}">
+          <td>
+            <div class="row" style="gap:.5rem">
+              <img class="avatar" src="${avatarUrl}" alt="">
+              <div>
+                <div>${name}</div>
+                <div class="muted">@${a.username || '—'}</div>
+              </div>
+            </div>
+          </td>
+          <td><span class="pill">${a.user_id}</span></td>
+          <td><span class="pill">${a.added_by || '—'}</span></td>
+          <td>${fmtDate(a.added_at)}</td>
+          <td class="right">
+            <button class="invite btn-remove" data-id="${a.user_id}">Remove</button>
+          </td>
+        </tr>`;
+    }
+
+    async function loadAdmins() {
+      const tbody = document.getElementById('admins-tbody');
+      tbody.innerHTML = `<tr><td colspan="5" class="muted">Loading…</td></tr>`;
+      try {
+        const list = await fetchJSON('/admin/list'); // GET
+        if (!list.length) {
+          tbody.innerHTML = `<tr><td colspan="5" class="muted">No admins yet.</td></tr>`;
+          return;
+        }
+        tbody.innerHTML = list.map(rowHTML).join('');
+      } catch (e) {
+        tbody.innerHTML = `<tr><td colspan="5" class="muted">Failed to load admins.</td></tr>`;
+        console.error(e);
+      }
+    }
+
+    async function addAdmin(id) {
+      await fetchJSON('/admin/add', {
+        method: 'POST',
+        headers: { 'content-type': 'application/json' },
+        body: JSON.stringify({ user_id: id })
+      });
+    }
+
+    async function removeAdmin(id) {
+      await fetchJSON('/admin/remove', {
+        method: 'POST',
+        headers: { 'content-type': 'application/json' },
+        body: JSON.stringify({ user_id: id })
+      });
+    }
+
     document.addEventListener('DOMContentLoaded', async () => {
       const gate = document.getElementById('admin-gate');
-      const actions = document.getElementById('admin-actions');
-      const panels = document.getElementById('admin-panels');
       const loginNeeded = document.getElementById('admin-login-needed');
       const goLogin = document.getElementById('go-login');
+      const mgr = document.getElementById('admins-manager');
 
+      // Auth gate via /me (includes is_admin)
       try {
-        const res = await fetch('/me', { credentials: 'include' });
-        if (res.ok) {
-          const u = await res.json();
-          document.getElementById('admin-name').textContent = u.global_name || u.username || 'Admin';
+        const uRes = await fetch('/me', { credentials: 'include' });
+        if (!uRes.ok) throw 0;
+        const u = await uRes.json();
+        document.getElementById('admin-name').textContent = u.global_name || u.username || 'Admin';
 
-          // reveal admin sections
-          gate.style.display = '';
-          actions.style.display = '';
-          panels.style.display = '';
-
-          // TODO: later, enforce role-gating here (check u.roles includes SUPPORTER/MOD/ADMIN role IDs)
-        } else {
-          // not logged in
+        if (!u.is_admin) { // hard-fail if not admin
           loginNeeded.style.display = '';
-          if (goLogin) goLogin.addEventListener('click', () => { window.location.href = '/login'; });
+          loginNeeded.querySelector('h1').textContent = 'Access Denied';
+          loginNeeded.querySelector('.about-me').textContent = 'This page is for site admins only.';
+          return;
         }
+
+        gate.style.display = '';
+        mgr.style.display = '';
+
+        // initial load
+        await loadAdmins();
+
       } catch (e) {
-        // In case /me fails—show login prompt
         loginNeeded.style.display = '';
         if (goLogin) goLogin.addEventListener('click', () => { window.location.href = '/login'; });
+        return;
       }
 
-      // Wire sample buttons (no-ops for now)
-      document.getElementById('rebuild-supporters')?.addEventListener('click', () => alert('POST /api/supporters/rebuild (to be implemented)'));
-      document.getElementById('toggle-banner')?.addEventListener('click', () => alert('POST /api/banner/toggle (to be implemented)'));
-      document.getElementById('purge-cache')?.addEventListener('click', () => alert('POST /api/cache/purge (to be implemented)'));
+      // Add/Remove by input
+      const input = document.getElementById('new-admin-id');
+      document.getElementById('btn-add-admin').addEventListener('click', async () => {
+        const id = (input.value || '').trim();
+        if (!id) return alert('Enter a Discord user ID first.');
+        try { await addAdmin(id); input.value=''; await loadAdmins(); }
+        catch (e) { alert('Failed to add admin: ' + e.message); }
+      });
+
+      document.getElementById('btn-remove-admin').addEventListener('click', async () => {
+        const id = (input.value || '').trim();
+        if (!id) return alert('Enter a Discord user ID first.');
+        if (!confirm('Remove this admin?')) return;
+        try { await removeAdmin(id); input.value=''; await loadAdmins(); }
+        catch (e) { alert('Failed to remove admin: ' + e.message); }
+      });
+
+      // Inline remove buttons
+      document.getElementById('admins-tbody').addEventListener('click', async (ev) => {
+        const btn = ev.target.closest('.btn-remove');
+        if (!btn) return;
+        const id = btn.getAttribute('data-id');
+        if (!id) return;
+        if (!confirm('Remove this admin?')) return;
+        try { await removeAdmin(id); await loadAdmins(); }
+        catch (e) { alert('Failed to remove admin: ' + e.message); }
+      });
+
+      // Refresh
+      document.getElementById('btn-refresh').addEventListener('click', loadAdmins);
     });
   </script>
 </body>
