Fixed mobile layout

--- a/admin.html
+++ b/admin.html
@@ -79,14 +79,14 @@
     </div>
 
     <!-- ============ ADMINS MANAGER ============ -->
-    <div class="discord" id="admins-manager" style="display:none">
+    <div class="admin-card" id="admins-manager" style="display:none">
       <h1>Admins Manager</h1>
       <p class="muted">Add/remove Discord IDs with access to this dashboard.</p>
       <br>
 
       <div class="card-panel">
         <div class="row">
-          <input id="new-admin-id" class="text-input" type="text" placeholder="Discord User ID (e.g., 123456789012345678)" />
+          <input id="new-admin-id" class="text-input" type="text" placeholder="Discord User ID" />
           <button class="invite" id="btn-add-admin">Add Admin</button>
           <button class="invite" id="btn-remove-admin">Remove Admin</button>
         </div>
@@ -121,7 +121,7 @@
     <!-- ============ /ADMINS MANAGER ============ -->
 
     <!-- ============ USERS LIST ============ -->
-    <div class="discord section-gap" id="users-list" style="display:none">
+    <div class="user-card section-gap" id="users-list" style="display:none">
       <h1>Users</h1>
       <p class="muted">All users who’ve logged in at least once.</p>
       <br>
