Update privacy policy and added remove users

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -55,9 +55,32 @@
 
                 <br>
                 <h2>Information Collected</h2>
-                <p>TheTimeVortex does not collect or store any personal or technical information about visitors.
-                    Any data collection is handled solely by the third-party services that support the
-                    site, as described in the Third-Party Services section.</p>
+                <p>
+                    TheTimeVortex collects limited personal information when you log in with Discord.
+                    This includes:
+                </p>
+                <ul>
+                    <li>Your Discord username, avatar, and banner</li>
+                    <li>Your unique Discord User ID</li>
+                    <li>Your email address</li>
+                    <li>Discord servers you've joined and basic member details (nickname, roles, etc.)</li>
+                </ul>
+                <p>
+                    This information is used only to authenticate you into the site, manage site permissions
+                    and roles, and provide admin/user dashboard functionality.
+                </p>
+                <p>
+                    We do <strong>not</strong> sell or share this data with third parties. Access is restricted
+                    to site administrators. You may request deletion of your information by contacting us at
+                    <a href="mailto:thedoctor@thetimevortex.net"><strong>thedoctor@thetimevortex.net</strong></a>.
+                </p>
+                <br>
+                <p>
+                    Aside from Discord login, TheTimeVortex does not collect or store any personal or technical
+                    information about visitors. Any additional data collection is handled solely by the
+                    third-party services that support the site, as described in the Third-Party Services section.
+                </p>
+
                 <br>
                 <h2>Local Storage</h2>
                 <p>TheTimeVortex does not use cookies. Instead, we use your browser’s <strong>localStorage</strong> to
