--- a/admin.html
+++ b/admin.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TheTimeVortex — Admin</title>
 
   <!-- Styles & Icons -->
@@ -26,7 +27,9 @@
   <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- First-paint dark mode -->
   <script>
@@ -40,20 +43,74 @@
   </script>
 
   <style>
-    .row { display:flex; gap:.75rem; flex-wrap:wrap; align-items:center; }
-    .text-input {
-      padding:.6rem .8rem; border-radius:12px; border:1px solid var(--border, #4442);
-      background: var(--bg, transparent); color: inherit; font: inherit; min-width:260px;
+    .row {
+      display: flex;
+      gap: .75rem;
+      flex-wrap: wrap;
+      align-items: center;
     }
-    .table { width:100%; border-collapse: collapse; }
-    .table th, .table td { padding:.6rem .5rem; border-bottom:1px solid #6663; text-align:left; }
-    .pill { padding:.2rem .55rem; border-radius:999px; font-size:.8rem; opacity:.8; border:1px solid #6664; }
-    .avatar { width:28px; height:28px; border-radius:50%; object-fit:cover; }
-    .right { text-align:right; }
-    .muted { opacity:.75; font-size:.9rem; }
-    .card-panel { padding:1.25rem; border-radius:18px; box-shadow:0 8px 30px #0002; background:var(--card, rgba(255,255,255,.02)); }
-    .section-gap { margin-top:2.25rem; }
-    .table-wrap { width:100%; overflow-x:auto; }
+
+    .text-input {
+      padding: .6rem .8rem;
+      border-radius: 12px;
+      border: 1px solid var(--border, #4442);
+      background: var(--bg, transparent);
+      color: inherit;
+      font: inherit;
+      min-width: 260px;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .table th,
+    .table td {
+      padding: .6rem .5rem;
+      border-bottom: 1px solid #6663;
+      text-align: left;
+    }
+
+    .pill {
+      padding: .2rem .55rem;
+      border-radius: 999px;
+      font-size: .8rem;
+      opacity: .8;
+      border: 1px solid #6664;
+    }
+
+    .avatar {
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .right {
+      text-align: right;
+    }
+
+    .muted {
+      opacity: .75;
+      font-size: .9rem;
+    }
+
+    .card-panel {
+      padding: 1.25rem;
+      border-radius: 18px;
+      box-shadow: 0 8px 30px #0002;
+      background: var(--card, rgba(255, 255, 255, .02));
+    }
+
+    .section-gap {
+      margin-top: 2.25rem;
+    }
+
+    .table-wrap {
+      width: 100%;
+      overflow-x: auto;
+    }
   </style>
 </head>
 
@@ -61,7 +118,6 @@
   <global-header></global-header>
 
   <div class="container">
-    <div class="banner-container"></div>
 
     <!-- Admin Gate -->
     <div class="main" id="admin-gate" style="display:none">
@@ -74,7 +130,7 @@
     <div class="main" id="admin-login-needed" style="display:none">
       <h1>Admin Login Required</h1>
       <p class="about-me">You must be logged in with your Discord account to access admin tools.</p>
-      <br/>
+      <br />
       <button class="invite" id="go-login">Login</button>
     </div>
 
@@ -90,7 +146,8 @@
           <button class="invite" id="btn-add-admin">Add Admin</button>
           <button class="invite" id="btn-remove-admin">Remove Admin</button>
         </div>
-        <p class="muted" style="margin-top:.5rem">Tip: In Discord, enable Developer Mode → right-click a user → Copy ID.</p>
+        <p class="muted" style="margin-top:.5rem">Tip: In Discord, enable Developer Mode → right-click a user → Copy ID.
+        </p>
       </div>
 
       <br><br>
@@ -112,7 +169,9 @@
               </tr>
             </thead>
             <tbody id="admins-tbody">
-              <tr><td colspan="5" class="muted">Loading…</td></tr>
+              <tr>
+                <td colspan="5" class="muted">Loading…</td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -138,10 +197,13 @@
                 <th>User</th>
                 <th>Discord ID</th>
                 <th>Joined</th>
+                <th class="right">Actions</th>
               </tr>
             </thead>
             <tbody id="users-tbody">
-              <tr><td colspan="3" class="muted">Loading…</td></tr>
+              <tr>
+                <td colspan="3" class="muted">Loading…</td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -235,6 +297,15 @@
       });
     }
 
+    async function removeUser(id) {
+      return fetchJSON('/users/remove', {
+        method: 'POST',
+        headers: { 'content-type': 'application/json' },
+        body: JSON.stringify({ user_id: id })
+      });
+    }
+
+
     // ---------- Users table ----------
     function userRowHTML(u) {
       const name = displayName(u);
@@ -254,6 +325,9 @@
           </td>
           <td><span class="pill truncate">${u.user_id}</span></td>
           <td>${joined}</td>
+          <td class="right">
+            <button class="invite btn-user-remove" data-id="${u.user_id}">Remove</button>
+          </td>
         </tr>`;
     }
 
@@ -315,7 +389,7 @@
       document.getElementById('btn-add-admin').addEventListener('click', async () => {
         const id = (input.value || '').trim();
         if (!id) return alert('Enter a Discord user ID first.');
-        try { await addAdmin(id); input.value=''; await loadAdmins(); }
+        try { await addAdmin(id); input.value = ''; await loadAdmins(); }
         catch (e) { alert('Failed to add admin: ' + e.message); }
       });
 
@@ -323,7 +397,7 @@
         const id = (input.value || '').trim();
         if (!id) return alert('Enter a Discord user ID first.');
         if (!confirm('Remove this admin?')) return;
-        try { await removeAdmin(id); input.value=''; await loadAdmins(); }
+        try { await removeAdmin(id); input.value = ''; await loadAdmins(); }
         catch (e) { alert('Failed to remove admin: ' + e.message); }
       });
 
@@ -341,7 +415,23 @@
 
       // Users actions
       document.getElementById('btn-users-refresh').addEventListener('click', loadUsers);
+
+      document.getElementById('users-tbody').addEventListener('click', async (ev) => {
+        const btn = ev.target.closest('.btn-user-remove');
+        if (!btn) return;
+        const id = btn.getAttribute('data-id');
+        if (!id) return;
+        if (!confirm('Remove this user from the site database? (Any admin role will also be removed)')) return;
+        try {
+          await removeUser(id);
+          await Promise.all([loadUsers(), loadAdmins()]); // refresh both lists
+        } catch (e) {
+          alert('Failed to remove user: ' + e.message);
+        }
+      });
+
     });
   </script>
 </body>
+
 </html>
