refactor: generalize CSS class names

--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -58,11 +58,11 @@
         </div>
     </div>
 
-    <div class="social-container">
-        <div class="socials">
+    <div class="section-container">
+        <div class="item-list">
             <h1>HashVT's Social Media</h1>
             <br><br>
-            <ul class="social-page-icons">
+            <ul class="icon-group">
                 <li class="card">
                     <a href="https://twitch.tv/HashVT" target="_blank">
                         <img src="/icons/twitch.svg" alt="Twitch">
