--- a/creators/havocassassin.html
+++ b/creators/havocassassin.html
@@ -57,11 +57,11 @@
         </div>
     </div>
 
-    <div class="social-container">
-        <div class="socials">
+    <div class="section-container">
+        <div class="item-list">
             <h1>TheHavocAssassin's Social Media</h1>
             <br><br>
-            <ul class="social-page-icons">
+            <ul class="icon-group">
                 <li class="card">
                     <a href="https://www.youtube.com/@havocassassin" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
