--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -65,11 +65,11 @@
         </div>
     </div>
 
-    <div class="social-container">
-        <div class="socials">
+    <div class="section-container">
+        <div class="item-list">
             <h1>TheDoctorTTV's Social Media</h1>
             <br><br>
-            <ul class="social-page-icons">
+            <ul class="icon-group">
                 <li class="card">
                     <a href="https://youtube.com/@thedoctorttv" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
