--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -65,11 +65,11 @@
         </div>
     </div>
 
-    <div class="social-container">
-        <div class="socials">
+    <div class="section-container">
+        <div class="item-list">
             <h1>Azzy123's Social Media</h1>
             <br><br>
-            <ul class="social-page-icons">
+            <ul class="icon-group">
                 <li class="card">
                     <a href="https://www.youtube.com/@azzy1235" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
