--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         </div>
     </div>
 
-    <div class="social-container">
-        <div class="socials">
+    <div class="section-container">
+        <div class="item-list">
             <h1>Meet The Creators</h1>
             <br><br>
-            <ul class="social-page-icons">
+            <ul class="icon-group">
                 <li class="card">
                     <a href="/creators/thedoctorttv.html">
                         <img src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
