Redo minecraft section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Together, we aim to entertain, connect, and create something bigger than ourselves
             </p>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>TheTimeVortex Discord!</h1>
             <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or
                 any other plarforms that they may
@@ -137,7 +137,7 @@
 
 
     <div class="mc-container">
-        <div class="minecraft-section">
+        <div>
             <h1>TheTimeVortex Bedrock Realm</h1>
             <br>
             <h3>Join the Realm</h3>
