Fix discord sections for member pages

--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -56,7 +56,7 @@
                 <img class="pfp" src="/PFPs/azzy123-pfp.webp" alt="Azzy123">
             </div>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>Hazura the Kingdom of Magic Discord!</h1>
             <p>Come join Hazura the Kingdom of Magic Discord Server, here you can talk, hangout and get notified when I
                 go live. </p>
