--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -49,7 +49,7 @@
                 <img class="pfp" src="/PFPs/HashVT.webp" alt="TheDoctorTTV">
             </div>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>Trending Squad Discord!</h1>
             <p>Come Join the Trending Squad Discord Server, here you can talk, hangout and get notified when I go live.
             </p>
