--- a/creators/havocassassin.html
+++ b/creators/havocassassin.html
@@ -49,7 +49,7 @@
                 <img class="pfp" src="/PFPs/TheHavocAssassin.webp" alt="TheHavocAssassin">
             </div>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>TheHavocAssassin Discord!</h1>
             <p>Come join the Discord server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
