--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -55,7 +55,7 @@
                 <img class="pfp" src="/icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
             </div>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>TheTimeVortex Discord!</h1>
             <p>Come join the Discord server! You'll get notified when I'm live on Twitch and YouTube, or you can just
                 chill with us, talk, game, or watch stuff. It's all about having fun and forgetting about the drama, you
