--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -49,7 +49,7 @@
                 <img class="pfp" src="/PFPs/CBoyPFP.webp" alt="CBoyDoesStuff">
             </div>
         </div>
-        <div class="discord">
+        <div class="secondary">
             <h1>CBoy's Wannabe Club Discord!</h1>
             <p>Want To Be A Loser?!?! COME AND JOIN THE WANNABES!!!</p>
             <br><br>
