--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <global-header></global-header>
 
-    <div class="container">
+    <div class="main-container">
         <div class="banner-container"></div>
         <div class="main">
             <h1>About Us</h1>
@@ -157,6 +157,9 @@
         </div>
     </div>
 
+    <div>
+
+    </div>
 
     <global-footer></global-footer>
 </body>
