--- a/profile.html
+++ b/profile.html
@@ -83,7 +83,7 @@
 <body>
   <global-header></global-header>
 
-  <div class="container">
+  <div class="main-container">
 
     <!-- Not logged in -->
     <div class="main" id="needs-login" style="display:none">
