--- a/admin.html
+++ b/admin.html
@@ -117,7 +117,7 @@
 <body>
   <global-header></global-header>
 
-  <div class="container">
+  <div class="main-container">
 
     <!-- Admin Gate -->
     <div class="main" id="admin-gate" style="display:none">
