--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -38,7 +38,7 @@
 
 <body>
     <global-header></global-header>
-    <div class="container">
+    <div class="main-container">
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
