--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
     <div class="mc-container">
-        <div>
+        <div class="minecraft">
             <h1>TheTimeVortex Bedrock Realm</h1>
             <br>
             <h3>Join the Realm</h3>
@@ -157,9 +157,27 @@
         </div>
     </div>
 
-    <div>
+<div class="secondary-container">
+  <div class="games">
+    <h1>Browser Games</h1>
+    <p>Explore browser games created by <strong>TheDoctorTTV</strong>, built for fun and seamless OBS integration.</p>
 
-    </div>
+    <ul>
+      <li>
+        <h2><a href="https://rps.thetimevortex.net" target="_blank">Rock Paper Scissors</a></h2>
+        <p>An interactive RPS game designed as a stream overlay for OBS.</p>
+        <p><a href="https://cdn.thetimevortex.net/RPS-StreamOverlay-Game-Docs.pdf" target="_blank">View Documentation (PDF)</a></p>
+      </li>
+
+      <li>
+        <h2><a href="https://simon-says.thetimevortex.net" target="_blank">Simon Says</a></h2>
+        <p>The classic memory game—test your reflexes and memory skills in browser form.</p>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
 
     <global-footer></global-footer>
 </body>
