--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -39,7 +39,7 @@
 <body>
     <global-header></global-header>
 
-    <div class="container">
+    <div class="main-container">
         <div class="main">
             <div class="privacy-policy">
                 <h1>Privacy Policy</h1>
